# upnext

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  api-tracking.md  cleanup-todo.md  docker-compose.yml  next-steps.md  pyproject.toml  pyrightconfig.json  pytest.ini  safety-migration-checklist.md  to-prod.md  todo.md  upnext.yaml
.github/workflows/: benchmarks.yml  bump-version.yml  ci.yml
docs/: docs.json  execution-guarantees.md  realtime-streams.md
docs/cli/: index.mdx
docs/concepts/: apis.mdx  artifacts.mdx  backends.mdx  context.mdx  cron-jobs.mdx  events.mdx  index.mdx  static-files.mdx  tasks.mdx  workers.mdx  workflows.mdx
docs/dashboard/: index.mdx  overview.mdx  setup.mdx
docs/deploy/: configuration.mdx  docker-compose.mdx  index.mdx
docs/get-started/: index.mdx  installation.mdx  quickstart.mdx
docs/guides/: authentication.mdx  dedicated-workers.mdx  error-handling.mdx  index.mdx  parallel-execution.mdx  run-services.mdx  secrets.mdx  submit-and-wait.mdx
examples/: Dockerfile  client.py  service.py
examples/frontend/: index.html  package.json
examples/frontend/src/: main.js  style.css
scripts/: release-packages.sh  verify-all-packages.sh  verify-conduit-package.sh  verify-integration.sh  verify-upnext-package.sh
scripts/benchmarks/: bootstrap.py  cli.py  config.py  engine.py  io.py  metrics.py  models.py  orchestrator.py  preflight.py  report_json.py  report_markdown.py  reporting.py  subprocess_client.py  summarize.py
scripts/benchmarks/runners/: __init__.py  base.py  celery.py  common.py  dramatiq.py  registry.py  saq.py  upnext.py  upnext_sync.py
tests/_fixtures/: time.py
todo/: namespaces.md
