[project]
name = "conduit-workspace"
version = "0.0.2"
description = "Conduit - Modal-inspired task queue and API framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
# Workspace root is not a package itself
package = false

[tool.uv.workspace]
members = [
    "packages/conduit",
    "packages/server",
    "packages/shared",
]

[dependency-groups]
dev = [
    "anyio>=4.11.0",
    "fakeredis[lua]>=2.26.0",
    "httpx>=0.28.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
