[project]
name = "upnext-workspace"
version = "0.0.2"
description = "UpNext - Modal-inspired task queue and API framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
# Workspace root is not a package itself
package = false
default-groups = ["dev", "benchmark"]

[tool.uv.workspace]
members = [
    "packages/upnext",
    "packages/server",
    "packages/shared",
]

[tool.uv.sources]
"upnext-server" = { workspace = true }
"upnext-shared" = { workspace = true }
upnext = { workspace = true }

[dependency-groups]
benchmark = [
    "upnext",
    "celery[redis]>=5.3.1",
    "dramatiq[redis]>=1.3.0",
]
dev = [
    "anyio>=4.11.0",
    "fakeredis[lua]>=2.26.0",
    "httpx>=0.28.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
